# coolh

./: .gitignore  LICENSE  clean.sh  coolh.cabal  diff.sh  readme.md  run.sh  todo.txt
app/: Main.hs  ReplTests.hs
debug/: 001.misc.in  001.misc.out  001.simple.out  065.booleans.out
lib/Data/: BSUtil.hs  Sizeable.hs  Stream.hs
lib/Debug/: Flags.hs
lib/Parser/: Core.hs  Position.hs  Result.hs
src/File/: LexerFmt.hs  ParserFmt.hs
src/Lexer/: Error.hs  Lexer.hs  Util.hs
src/Lexer/Parser/: Combinators.hs  Parser.hs
src/Parser/: Error.hs  Parser.hs
src/Parser/Grammar/: Grammar.hs  Pratt.hs
src/Semantic/: Error.hs  Typecheck.hs  TypedAST.hs
